# confluence-agent

./: .env.example  .gitignore  ANALYSIS.md  CHANGELOG.md  ENTITY_VIEWER.md  LANGEXTRACT_USAGE.md  OUTPUT_LENGTH_FEATURE.md  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS.md  compare_output.html  config.yaml  pyproject.toml  test_all_cases.py  test_api.py  test_compare.py  test_langextract.py  test_meeting.txt  test_viz.py  viz_output.html
.claude/: settings.local.json
src/: __init__.py  compare_viz.py  config_loader.py  extractor.py  main.py  mcp_client.py  processor.py  publisher.py  router.py  templates.py  web_ui.py
src/adapters/: __init__.py  base.py  gdrive.py  local_file.py  sharepoint.py  web.py  web_search.py  youtube.py
static/: entities.html  index.html
templates/: meeting_notes.txt  research.txt  summary.txt  tech_doc.txt  weekly_report.txt
